--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,16 @@ homepage = "https://github.com/estripling/bumbag"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
+black = {extras = ["jupyter"], version = "^22.3.0"}
+isort = "^5.10.1"
+flake8 = "^4.0.1"
+python-semantic-release = "^7.29.0"
+jupyter = "^1.0.0"
+myst-nb = "^0.15.0"
+sphinx-autoapi = "^1.8.4"
+sphinx-rtd-theme = "^1.0.0"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
