--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ homepage = "https://github.com/estripling/bumbag"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+toolz = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
