--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["BumBag Developers"]
 license = "BSD 3-Clause"
 readme = "README.md"
 homepage = "https://github.com/estripling/bumbag"
+include = ["LICENSES/"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
