build: add watermark as dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ sphinx-autoapi = "^1.8.4"
 sphinx-rtd-theme = "^1.0.0"
 pandas = "^1.4.2"
 matplotlib = "^3.5.2"
+watermark = "^2.3.1"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
