--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ sphinx-rtd-theme = "^1.0.0"
 pandas = "^1.4.2"
 matplotlib = "^3.5.2"
 watermark = "^2.3.1"
+sphinx-copybutton = "^0.5.0"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
