docs(*): move from sphinx-rtd-theme to furo theme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,11 @@ python-semantic-release = "^7.29.0"
 jupyter = "^1.0.0"
 myst-nb = "^0.15.0"
 sphinx-autoapi = "^1.8.4"
-sphinx-rtd-theme = "^1.0.0"
 pandas = "^1.4.2"
 matplotlib = "^3.5.2"
 watermark = "^2.3.1"
 sphinx-copybutton = "^0.5.0"
+furo = "^2022.6.21"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
