docs(README.md): change homepage to repository

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A package for Python utility functions."
 authors = ["BumBag Developers"]
 license = "BSD-3-Clause"
 readme = "README.md"
-homepage = "https://github.com/estripling/bumbag"
+repository = "https://github.com/estripling/bumbag"
 documentation = "https://bumbag.readthedocs.io/en/stable/"
 include = ["LICENSES/"]
 keywords = ["utility functions", "bumbag"]
