--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+python-dateutil = "^2.8.2"
 toolz = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
