--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ sphinx-autoapi = "^1.8.4"
 sphinx-copybutton = "^0.5.0"
 furo = "^2022.6.21"
 
+[tool.black]
+line-length = 88
+
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
 branch = "main"
