--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,8 @@ jobs:
     - name: Run Flake8
       run: poetry run flake8 --doctests --max-line-length 88 src/ tests/
 
-    - name: Run pytest doctest
-      run: poetry run pytest --doctest-modules
-
     - name: Run pytest
-      run: poetry run pytest tests/ --cov=src/ --cov-report=xml
+      run: poetry run pytest --doctest-modules src/ --cov=src/ --cov-report=xml tests/
 
     - name: Use Codecov to track coverage
       uses: codecov/codecov-action@v2
