--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,12 +65,12 @@ jobs:
     - name: Set up Python 3.8
       uses: actions/setup-python@v4
       with:
-        python-version: "3.8"
+        python-version: 3.8
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
-        version: 1.3.1
+        version: 1.3.2
 
     - name: Install bumbag
       run: poetry install
