--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ sphinx-autoapi = "^1.8.4"
 sphinx-copybutton = "^0.5.0"
 furo = "^2022.6.21"
 
+[tool.poetry.group.dev.dependencies]
+time-machine = "^2.13.0"
+
 [tool.black]
 line-length = 88
 
